--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
 <body class="dark:bg-slate-800 overflow-x-hidden">
     <div class="navbar font-bold w-full h-16 flex justify-between items-center bg-white shadow-md shadow-black dark:bg-slate-800 duration-300 ease-in fixed top-0 z-50">
         <div class="text flex items-center">
-            <h1 class="ms-5 dark:text-white">My Portfolio</h1>
+            <div class="logo w-24 h-24 bg-contain bg-no-repeat bg-center" style="background-image: url(src/assets/logo.png);"></div>
             <button class="moon ms-5 text-xl" onclick="toggleDarkMode()"><svg class="dark:fill-white fill-black" xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 384 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com --><path d="M223.5 32C100 32 0 132.3 0 256S100 480 223.5 480c60.6 0 115.5-24.2 155.8-63.4c5-4.9 6.3-12.5 3.1-18.7s-10.1-9.7-17-8.5c-9.8 1.7-19.8 2.6-30.1 2.6c-96.9 0-175.5-78.8-175.5-176c0-65.8 36-123.1 89.3-153.3c6.1-3.5 9.2-10.5 7.7-17.3s-7.3-11.9-14.3-12.5c-6.3-.5-12.6-.8-19-.8z"/></svg></button>
         </div>
         <div class="links me-5">
@@ -35,7 +35,7 @@
 
     <div id="about" class="content w-full min-h-screen bg-white dark:bg-slate-800 dark:text-white duration-700 ease-in">
         <h2 data-aos="fade-up" data-aos-delay="800" class="text-md text-justify pt-6 px-40">Hi there! My name is Anak Agung Ngurah Bagus Ryananta Danendra--quite a long name isnt it? But you can just call me Gung Danend or without the Gung is alright. Here, i want to share about my profile</h2>
-        <div class="image w-full h-96 mt-8 bg-contain bg-no-repeat bg-center bg-fixed" style="background-image: url(src/assets/about.jpeg);"></div>
+        <div class="image w-full h-96 mt-8 bg-cover bg-no-repeat bg-fixed" style="background-image: url(src/assets/about.jpeg);"></div>
         <h2 data-aos="fade-up" data-aos-delay="500" class="text-sm pt-12 px-40 text-justify">I was born on the 13th of April 2006, and im the 1 child of three. I was born in Bali, Indonesia--a really beautiful island and known for its beautiful beach.</h2>
         <h3 data-aos="fade-up" data-aos-delay="800" class="text-sm pt-5 px-40 text-justify">My education starts from a school named Bintang Besar, its a kindergarden with a playground and swimming pool--a really good facilities for a kindergarden for me. <br> and for primary school i went to Bali Kiddy School--a school that require its student to speak english everyday--maybe thats why now i can speak a little bit of english, and the facilities right there is very complete too--swimming pool, basketball court, clean toilet--of course 'cause the primary school just been made after i graduated from kindergarden. <br> continue to my junior highschool i wnet to Jembatan Budaya School, achool that studies english and mandarin everyday, but now i dont know why altough i study mandarin everyday but my mandarin is still bad is as h*ll--maybe 'cause my friends and the teachers dont speak mandarin regularly so me, my friends, and the teachers speaks Indonesian--but its okay,at least i dont loss my english skills. <br> continue to my senior high school i went to a school named SMK Negeri 1 Denpasar, a vocational school and i take the software enggineering major 'cauese i think that something that have a relation with technology will last a long time--i think, but lets see. Of cource the facilities here is not as good as my previous school since this school is 60 years old--like dirty toilet, bad basketball court--but its okay for me, at least i got the knowledge here. and here i started playing basketball and i loved it.</h3>
         <h3 data-aos="fade-up" data-aos-delay="800" class="text-sm pt-5 px-40 text-justify">Maybe here i will also write about what do i do, and my skills as a software enggineer--maybe if you need to amke web, you can just contact me--of course based on my skills, dont request any hard web 'cause im still a begginer <br> Here are some of my skills : </h3>
@@ -51,7 +51,7 @@
         </div>
         <h2 class="text-center px-40">And Here are some of my projects. not much but--i've done my best :)</h2>
         <div class="projects w-full flex flex-wrap justify-center px-20 py-20 gap-5">
-            <div id="project" class="project w-80 h-48 bg-contain bg-no-repeat bg-center" style="background-image: url(src/assets/vanilla.png);"><div id="overlay" class="overlay w-80 h-48 text-center justify-center items-center bg-black text-white opacity-70 hidden duration-300 ease-out"></div></div>
+            <div id="project -z-50" class="project w-80 h-48 bg-contain bg-no-repeat bg-center" style="background-image: url(src/assets/vanilla.png);"><div id="overlay" class="overlay w-80 h-48 text-center justify-center items-center bg-black text-white opacity-70 hidden duration-300 ease-out"></div></div>
             <div id="project" class="project w-80 h-48 bg-contain bg-no-repeat bg-center" style="background-image: url(src/assets/wordpress.png);"><div id="overlay" class="overlay w-80 h-48 text-center justify-center items-center bg-black text-white opacity-70 hidden"></div></div>
         </div>
     </div>
