--- a/blog.html
+++ b/blog.html
@@ -13,7 +13,7 @@
 <body class="overflow-x-hidden">
     <div class="navbar font-bold w-full h-16 flex justify-between items-center shadow-md bg-white shadow-black fixed top-0 z-50 dark:bg-slate-800 duration-200 ease-in dark:shadow-white">
         <div class="text flex items-center">
-            <h1 class="ms-5 dark:text-white">My Portfolio</h1>
+            <div class="logo w-24 h-24 bg-contain bg-no-repeat bg-center" style="background-image: url(src/assets/logo.png);"></div>
             <button class="moon ms-5 text-xl" onclick="toggleDarkMode()"><svg class="dark:fill-white fill-black" xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 384 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com --><path d="M223.5 32C100 32 0 132.3 0 256S100 480 223.5 480c60.6 0 115.5-24.2 155.8-63.4c5-4.9 6.3-12.5 3.1-18.7s-10.1-9.7-17-8.5c-9.8 1.7-19.8 2.6-30.1 2.6c-96.9 0-175.5-78.8-175.5-176c0-65.8 36-123.1 89.3-153.3c6.1-3.5 9.2-10.5 7.7-17.3s-7.3-11.9-14.3-12.5c-6.3-.5-12.6-.8-19-.8z"/></svg></button>
         </div>
         <div class="links me-5">
